Druppy (10/Feb/02)
------------------
Additions:
	+ Added Distance Field in the Mob List
	+ Added an option to enable Color-Coding
	  spawns based on thier con in the mob list.
	  This feature is toggable via 
	  Prefs->Misc->EnableMobListColors

Andon (10/Feb/02)
------------------
Additions (SnowBlind):
 + Added a command line option to turn on packet captures
   not defaults to not making one if you dont add the
   --capture option

Additions:
 + Added support for object spawns..  These include things
   such as:  Graves, Realm Banners, and other misc. spawns.

   * I will give object spawns their own size / shape and
     color in a future patch..

 + Added support to compile Excalibur 1.0.7 in FreeBSD!!
    (Thank you Ackmed)

   * The code assumes you want to sniff on fxp0, if you want
     to use another interface, edit excalibur.h - I'll add
     support to change this at runtime when I get some more
     free time

Additions (SnowBlind):
 + Added a way to turn off drawing of each range circle PLEASE
   CLICK DOWN DOWN BUTTON UNTILL IT SAYS 'No Draw' IF YOU DONT
   WANT THEM TO DRAW
 + Changed the steping of the range circle to 25
 
Bug fixes:
 + Fixed a SERIOUS stack corruption issue with the dump unknown
   data code..  Using printf on a plain string is BAD BAD BAD,
   Any packet containing a %* in it could cause a stack corrup-
   tion. It's been fixed, and there's no longer a security risk
   associated with that code.


Andon (09/Feb/02)
------------------

Additions:
 + Added the ability to toggle a few DEBUG features on or off
   at runtime... They are:
     - Log unknown packets to stdout
     - Log unknown packets to a file
     - Enable experimental code
     - Show out of order packets

    * More to come later

Additions (SnowBlind):
 + Added a new prefs tab for Map Circles to allow runtime changing.
   of circles radius (support for user entered numbers comming soon)
 + Moved the Map Circles draw options from the Map Display to the