@@ -1,3 +1,8 @@
+Druppy (11/Feb/02)
+------------------
+Additions:
+	+ Added a RegExp Filter at the top of the map
+
 Druppy (10/Feb/02)
 ------------------
 Additions:
